fixes search button pixel off on tablet

--- a/styleguide/source/assets/scss/01-atoms/_search-field.scss
+++ b/styleguide/source/assets/scss/01-atoms/_search-field.scss
@@ -95,8 +95,8 @@
     }
 
     .subcategory_listing {
-      min-height: 36px;
-      max-height: 36px;
+      min-height: 37px;
+      max-height: 37px;
 
       svg {
         height: 24px;
